Further Detail init
Added content
Added Subheader
Added Caroussels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "lightbox",
         "Lighttown",
-        "Rockcity"
+        "Rockcity",
+        "Wireframe"
     ]
 }
