Big Update Learning Outcome content
Added almost all content except for front end

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "lightbox",
         "Lighttown",
+        "Lingvanex",
         "Rockcity",
         "Wireframe"
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
